--- a/styles.css
+++ b/styles.css
@@ -70,10 +70,10 @@ header {
 .dropdown_menu {
   display: none;
   position: absolute;
-  right: 2rem;
   height: 0;
   top: 60px;
-  width: 300px;
+  width: 100%;
+  left: 0;
   background: rgb(15, 15, 15);
   backdrop-filter: blur(15px);
   border-radius: 10px;
@@ -85,11 +85,14 @@ header {
 }
 
 .dropdown_menu li {
-  padding: 0.7rem;
+  padding-top: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+.dropdown_menu li:first-child {
+  padding-top: 3.5rem;
 }
 .dropdown_menu .action_btn {
   width: 100%;
@@ -139,7 +142,7 @@ header {
     width: 100%;
     display: block;
     z-index: 1;
-    padding-top: 4rem;
+    padding-top: 2rem;
   }
   .dropdown_menu a {
     color: #000;
