--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ header {
 }
 .navbar .logo a {
   font-size: 1.5rem;
-  font-weight: bold;
+  font-family: "Noto Serif Makasar", serif;
 }
 .navbar .links {
   display: flex;
@@ -547,7 +547,7 @@ footer li {
   padding: 10px;
 }
 footer li:hover {
-  color: #4caf50;
+  color: #04435c;
 }
 footer a {
   text-decoration: none;
@@ -567,10 +567,9 @@ footer a {
 .footerlogo {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  font-size: 22px;
-  font-weight: 600;
+  gap: 40px;
+  font-size: 18px;
 }
 .Footercontact a {
   text-decoration: none;
@@ -578,6 +577,23 @@ footer a {
   cursor: pointer;
   font-size: 22px;
 }
+.Flogo a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  font-family: "Noto Serif Makasar", serif;
+  font-size: clamp(20px, 4vw, 40px);
+}
+
+.tagline p {
+  font-size: clamp(16px, 3vw, 24px);
+  color: #04435c;
+}
+
+.phone {
+  font-size: clamp(14px, 2.5vw, 20px);
+}
+
 /* body css */
 @media (max-width: 980px) {
   .about {
