--- a/styles.css
+++ b/styles.css
@@ -602,7 +602,7 @@ footer a {
 }
 
 /* body css */
-@media (max-width: 980px) {
+@media only screen and (max-width: 980px) {
   .about {
     display: flex;
     flex-direction: column;
@@ -619,6 +619,10 @@ footer a {
   }
   .services {
     margin-bottom: 50px;
+  }
+  .service img {
+    width: 50px;
+    height: 50px;
   }
   .servicesList {
     display: flex;
@@ -645,10 +649,16 @@ footer a {
     flex-direction: column;
     margin-top: 0;
   }
+  .process-step {
+    width: 100px;
+    height: 100px;
+  }
   .process-container {
+    margin-top: 30px;
+    margin-bottom: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 60px;
   }
 
   .process-icon {
@@ -684,9 +694,10 @@ footer a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
   }
   .pricing-card {
-    width: 100%;
+    width: 80%;
   }
 
   .form-container {
